--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /*Selector de etiqueta 0,0,1*/
-
+/* 
 
 div{
     background-color: red;
@@ -32,9 +32,7 @@ Con el # se selecciona id */
     background-color: grey;
 }
 
-/* Selectores combinados: 
-
-*/
+/* Selectores combinados:*/
 p{
     color: blue;
 }
@@ -43,17 +41,17 @@ p{
     color: green;
 }
 
-/* si quiero que cumplan la norma sólo los hijos es con >
+/* si quiero que cumplan la norma sólo los hijos es con > */
 .primerDiv > p {
     font-size: 64px;
     color: green;
-} */
+}
 
 .p3{
     text-decoration: underline;
-}
+} */
 
-/*pseudoclase*/
+/*pseudoclase
 .p3:hover{
     color: aliceblue;
-}
+} 
